--- a/src/components/atoms/TextBox/styles.css
+++ b/src/components/atoms/TextBox/styles.css
@@ -1,5 +1,12 @@
-.styled-textbox {
-  &.styled-textbox-background-black {
-    background: black;
-  }
+.text-box {
+  background-color: #FFEFBD;
+  color: black;
+  width: 100%;
+  padding-bottom: 1.4rem;
+  padding-top: 1.4rem;
+  border-radius: 10px;
+  font-family: 'Noto Sans KR';
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
 }
