--- a/src/components/atoms/Button/styles.css
+++ b/src/components/atoms/Button/styles.css
@@ -1,12 +1,26 @@
 .button {
-  background-color: #34A853;
   color: white;
   width: 100%;
   padding-bottom: 0.7rem;
   padding-top: 0.7rem;
-  font-size: 16px;
-  font-family: 'Noto Sans KR';
   font-weight: 400;
   border-radius: 10px;
   text-align: center;
+  border: none;
+  cursor: pointer;
+}
+.button.background-color-green {
+  background-color: #c2dcc6;
+}
+.button.background-color-green:active,
+.button.background-color-green:hover {
+  background-color: #34a853;
+}
+
+.button.background-color-grey {
+  background-color: #ddd;
+}
+.button.background-color-grey:active,
+.button.background-color-grey:hover {
+  background-color: #b9b9b9;
 }
