feat: add styles for mobile size

--- a/src/components/atoms/Button/styles.css
+++ b/src/components/atoms/Button/styles.css
@@ -3,6 +3,7 @@
   width: 100%;
   padding-bottom: 0.7rem;
   padding-top: 0.7rem;
+  margin-top: 0.5rem;
   font-weight: 400;
   border-radius: 10px;
   text-align: center;
